Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59345

tst_Scene2D::checkInitializeFromPeer() crashes on Mac OS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 4
    • 5.9, 5.10
    • Qt3D
    • Mac OS
    • macOS
    • a2adf9df3b0c31f7f7661a1f705b591c5b259ff8

    Description

      The test has crashed 5 times within the last week in the CI.

      build log: http://testresults.qt.io/logs/qt/qt3d/939996997473c638456ab5a72938efac22ca98ad/MacOSOSX_10_10x86_64MacOSOSX_10_10x86_64Clangqtci-osx-10.10-x86_64-4dcbfdDeveloperBuild_Release_QtNamespace_NoPch/f5c99cf6f8c59d19a0345281d31486f30142607c/testrun_web_qt_qt5_1488301840665/testlog.txt.gz

      ========= Received signal, dumping stack ==============
      (lldb) process attach --pid 8144
      Process 8144 stopped
      * thread #1: tid = 0x450a, 0x00007fff895d691a libsystem_kernel.dylib`__wait4_nocancel + 10, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP
          frame #0: 0x00007fff895d691a libsystem_kernel.dylib`__wait4_nocancel + 10
      libsystem_kernel.dylib`__wait4_nocancel:
      ->  0x7fff895d691a <+10>: jae    0x7fff895d6924            ; <+20>
          0x7fff895d691c <+12>: movq   %rax, %rdi
          0x7fff895d691f <+15>: jmp    0x7fff895d1c53            ; cerror_nocancel
          0x7fff895d6924 <+20>: retq   
      
      Executable module set to "/Users/qt/work/qt/qt3d/tests/auto/render/scene2d/tst_scene2d".
      Architecture set to: x86_64-apple-macosx.
      (lldb) bt all
      * thread #1: tid = 0x450a, 0x00007fff895d691a libsystem_kernel.dylib`__wait4_nocancel + 10, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP
        * frame #0: 0x00007fff895d691a libsystem_kernel.dylib`__wait4_nocancel + 10
          frame #1: 0x00007fff8c7a721c libsystem_c.dylib`system + 459
          frame #2: 0x000000010f5d4054 QtTest`___lldb_unnamed_function15$$QtTest + 164
          frame #3: 0x000000010f5d3f65 QtTest`___lldb_unnamed_function14$$QtTest + 197
          frame #4: 0x00007fff952fef1a libsystem_platform.dylib`_sigtramp + 26
          frame #5: 0x00007fff895d7c23 libsystem_kernel.dylib`write + 11
          frame #6: 0x000000010e93d87f QtCore`TestNamespace::QEventDispatcherUNIX::wakeUp() + 63
          frame #7: 0x000000010e8e922f QtCore`TestNamespace::QCoreApplication::postEvent(TestNamespace::QObject*, TestNamespace::QEvent*, int) + 399
          frame #8: 0x000000010deba088 Qt3DQuickRender`TestNamespace::Qt3DRender::Render::Quick::Scene2D::initializeSharedObject() + 344
          frame #9: 0x000000010deba2b6 Qt3DQuickRender`TestNamespace::Qt3DRender::Render::Quick::Scene2D::initializeFromPeer(TestNamespace::QSharedPointer<TestNamespace::Qt3DCore::QNodeCreatedChangeBase> const&) + 214
          frame #10: 0x000000010de9a8d4 tst_scene2d`TestNamespace::Qt3DCore::QBackendNodeTester::simulateInitialization(TestNamespace::Qt3DCore::QNode*, TestNamespace::Qt3DCore::QBackendNode*) + 84
          frame #11: 0x000000010de9869b tst_scene2d`tst_Scene2D::checkInitializeFromPeer() + 651
          frame #12: 0x000000010e8f22c4 QtCore`TestNamespace::QMetaMethod::invoke(TestNamespace::QObject*, TestNamespace::Qt::ConnectionType, TestNamespace::QGenericReturnArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument, TestNamespace::QGenericArgument) const + 1348
          frame #13: 0x000000010f5d20c8 QtTest`___lldb_unnamed_function8$$QtTest + 1160
          frame #14: 0x000000010f5d2cd4 QtTest`___lldb_unnamed_function9$$QtTest + 788
          frame #15: 0x000000010f5d3b04 QtTest`___lldb_unnamed_function12$$QtTest + 1076
          frame #16: 0x000000010f5d4727 QtTest`TestNamespace::QTest::qExec(TestNamespace::QObject*, int, char**) + 1143
          frame #17: 0x000000010de97f1c tst_scene2d`main + 124
          frame #18: 0x00007fff925f45c9 libdyld.dylib`start + 1
      
        thread #2: tid = 0x450b, 0x00007fff895d7232 libsystem_kernel.dylib`kevent64 + 10, queue = 'com.apple.libdispatch-manager'
          frame #0: 0x00007fff895d7232 libsystem_kernel.dylib`kevent64 + 10
          frame #1: 0x00007fff92fabd91 libdispatch.dylib`_dispatch_mgr_invoke + 247
          frame #2: 0x00007fff92faba6a libdispatch.dylib`_dispatch_mgr_thread + 52
      
        thread #3: tid = 0x450c, 0x00007fff895d694a libsystem_kernel.dylib`__workq_kernreturn + 10
          frame #0: 0x00007fff895d694a libsystem_kernel.dylib`__workq_kernreturn + 10
          frame #1: 0x00007fff917c7b29 libsystem_pthread.dylib`_pthread_wqthread + 869
          frame #2: 0x00007fff917c53dd libsystem_pthread.dylib`start_wqthread + 13
      
        thread #4: tid = 0x450d, 0x00007fff895d694a libsystem_kernel.dylib`__workq_kernreturn + 10
          frame #0: 0x00007fff895d694a libsystem_kernel.dylib`__workq_kernreturn + 10
          frame #1: 0x00007fff917c7b29 libsystem_pthread.dylib`_pthread_wqthread + 869
          frame #2: 0x00007fff917c53dd libsystem_pthread.dylib`start_wqthread + 13
      
        thread #5: tid = 0x450e, 0x00007fff895d694a libsystem_kernel.dylib`__workq_kernreturn + 10
          frame #0: 0x00007fff895d694a libsystem_kernel.dylib`__workq_kernreturn + 10
          frame #1: 0x00007fff917c7b29 libsystem_pthread.dylib`_pthread_wqthread + 869
          frame #2: 0x00007fff917c53dd libsystem_pthread.dylib`start_wqthread + 13
      
        thread #6: tid = 0x450f, 0x00007fff895d6136 libsystem_kernel.dylib`__psynch_cvwait + 10, name = 'QThread'
          frame #0: 0x00007fff895d6136 libsystem_kernel.dylib`__psynch_cvwait + 10
          frame #1: 0x00007fff917c8560 libsystem_pthread.dylib`_pthread_cond_wait + 693
          frame #2: 0x000000010e72764f QtCore`___lldb_unnamed_function273$$QtCore + 287
          frame #3: 0x000000010e72748b QtCore`___lldb_unnamed_function272$$QtCore + 43
          frame #4: 0x000000010e727352 QtCore`TestNamespace::QWaitCondition::wait(TestNamespace::QMutex*, unsigned long) + 162
          frame #5: 0x000000010f5d98d6 QtTest`___lldb_unnamed_function33$$QtTest + 70
          frame #6: 0x000000010e725e2f QtCore`___lldb_unnamed_function263$$QtCore + 367
          frame #7: 0x00007fff917c805a libsystem_pthread.dylib`_pthread_body + 131
          frame #8: 0x00007fff917c7fd7 libsystem_pthread.dylib`_pthread_start + 176
          frame #9: 0x00007fff917c53ed libsystem_pthread.dylib`thread_start + 13
      (lldb) quit
      ========= End of stack trace ==============
      QFATAL : tst_Scene2D::checkInitializeFromPeer() Received signal 13
               Function time: 32ms Total time: 33ms
      FAIL!  : tst_Scene2D::checkInitializeFromPeer() Received a fatal error.
         Loc: [Unknown file(0)]
      Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 17086ms
      ********* Finished testing of tst_Scene2D *********
      make: *** [check] Abort trap: 6
      
      agent:2017/02/28 23:14:45 build.go:200: Process finished with error: exit status 2
      agent:2017/02/28 23:14:45 build.go:152: Error reading from stdout/err: exit status 2
      agent:2017/02/28 23:15:05 build.go:270: [make check -j1] 900 1200
      /Users/qt/work/qt/qt3d/tests/auto/render/scene2d/target_wrapper.sh  ./tst_scene2d checkInitializeFromPeer
      

      Another autotest failing with 'Peer' is: https://bugreports.qt.io/browse/QTBUG-59336 but I cannot tell if those are related or not.

      Attachments

        For Gerrit Dashboard: QTBUG-59345
        # Subject Branch Project Status CR V

        Activity

          People

            seanharmer Sean Harmer
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes