Fix flaky autotest tst_scene2d

Add early bail out to initializeSharedObject when running autotest.

Task-number: QTBUG-59345
Change-Id: I566c59e3f84e45a8d072b0bd5119a5127ee88bf8
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>